# filecoin-solidity

./: .env.example  .gitignore  .gitmodules  .prettierrc  FAQ.md  Makefile  README.md  foundry.toml  hardhat.config.js  hardhat.config.ts  package.json  remappings.txt  tsconfig.json
.github/test-api-use/: README.md  hardhat.config.js  package.json
.github/test-api-use/contracts/: API-Inclusion.sol
.github/workflows/: main.yaml  publish-and-use.yaml  security.yaml  tests.yaml
contracts/v0.8/: AccountAPI.sol  DataCapAPI.sol  MarketAPI.sol  MinerAPI.sol  PowerAPI.sol  PrecompilesAPI.sol  SendAPI.sol  Utils.sol  VerifRegAPI.sol
contracts/v0.8/cbor/: AccountCbor.sol  BigIntCbor.sol  DataCapCbor.sol  FilecoinCbor.sol  MarketCbor.sol  MinerCbor.sol  PowerCbor.sol  VerifRegCbor.sol
contracts/v0.8/helpers/: MarketHelper.sol  _BasicProxy.sol
hh-test/: _deployProxies.ts  market.sample.t.ts  utils.ts  verifreg_deserial.t.ts
hh-test/calibnet/: _common.ts  market.t.ts
hh-test/upgradeable/: market.beacon.t.ts  market.transparent.t.ts  market.uups.t.ts
lib-dev/: README.md
lib-dev/dev-env/: .env.example  0_sleep.sh  1_clean-start-localnet.sh  2_restart-localnet.sh  3_clean-simple-start.sh  4_kill-lotus-ps.sh  5_test-run-localnet.sh  Dockerfile  README.md  docker-compose.yaml
test/: FilAddresses.t.sol
testing/: Cargo.toml  rust-toolchain.toml  smoke_tests.sh
testing/src/: helpers.rs  lib.rs  setup.rs
testing/src/api_contracts/: account_test.rs  address_test.rs  bigints_test.rs  cbor_decode_test.rs  datacap_test.rs  deserialize_params_test.rs  market_cbor_test.rs  market_test.rs  miner_test.rs  mod.rs  power_test.rs  precompiles_test.rs  send_test.rs  verifreg_test.rs
testing/tests/: account.rs  address.rs  bigints.rs  cborDecode.rs  datacap.rs  deserializeParams.rs  market.rs  marketCbor.rs  miner.rs  power.rs  precompiles.rs  send.rs  verifreg.rs
(+80 files in other folders)
